# dep

./: .gitignore  .gitmodules  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/assets/: Readme.md  index.html  index.js  login.js  service.did
src/assets/elements/: dependency.js
src/assets/elements/token/: tokenAmount.js
src/core/: Cargo.toml  core.did
src/core/src/: finance.rs  index.rs  lib.rs
src/coreExtended/: Cargo.toml  coreExtended.did
src/coreExtended/src/: lib.rs
src/depend/: Cargo.toml
src/depend/src/: lib.rs
src/depo/: repo.did
src/depoContent/: Cargo.toml
src/depoContent/src/: git.rs  lib.rs
src/identity/: Cargo.toml  identity.did
src/identity/src/: enterprise.rs  lib.rs  org.rs  user.rs
src/repo/: Cargo.toml
src/repo/src/: Security.rs  contributors.rs  issues.rs  lib.rs
src/repo/src/git_proxy/: mod.rs
src/repoContent/: Cargo.toml
src/repoContent/src/: fileSystem.rs  git.rs  lib.rs
src/repoContent/src/git_proxy/: mod.rs
src/search/: Cargo.toml  search.did
src/search/src/: lib.rs
src/token/: Cargo.toml  token.did
src/token/src/: lib.rs  token.rs
