[package]
name = "repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-macros = "0.3"
candid = "0.7.4"
serde = "1.0"
ic-kit = "0.4.3"
ic-cdk = "0.3.1"
ic-utils = "0.18.0"
ic-agent = "0.18.0"
assert-panic = "1.0.1"