[package]
name = "search"
version = "0.1.0"
edition = "2021"
# This canister manages repo, org, user search

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-macros = "0.3"
candid = "0.7.4"
serde = "1.0"
ic-kit = "0.4.3"
ic-cdk = "0.3.1"
assert-panic = "1.0.1"
ic-utils = "0.18.0"